--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
