--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/moods/very_low.png
+    - assets/moods/low.png
+    - assets/moods/neutral.png
+    - assets/moods/good.png
+    - assets/moods/excellent.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
