--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.2.0
   google_fonts: ^6.3.1
+  speech_to_text: ^7.3.0
 
 dev_dependencies:
   flutter_test:
