--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.2.0
   google_fonts: ^6.3.1
   speech_to_text: ^7.3.0
+  material_symbols_icons: ^4.2872.0
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +81,7 @@ flutter:
     - assets/background/Excellent_bg.png
     - assets/background/Profile_bg.png
     - assets/images/Profile_Icon.png
+    - assets/images/check-in.jpg
     - assets/wellness/Grounding_techniques.png
     - assets/wellness/Positive_affirmations.png
     - assets/wellness/Check_in.png
